[package]
name = "litesim"
description = "A discrete event simulation library"
author = "Tin Švagelj <tin.svagelj@live.com>"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0 OR zlib"
keywords = ["discrete", "event", "simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand_core = "0.6"
rand = "0.8"

float-ord = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }

thiserror = "1.0"

[dev-dependencies]
log = "0.4"
env_logger = "0.10"

[features]
default = ["time_f32"]

serde = ["dep:serde"]

time_f32 = ["dep:float-ord"]
time_f64 = ["dep:float-ord"]
time_chrono = ["dep:chrono"]
