[workspace]
members = ["./crates/litesim_macros", "./crates/litesim_models"]

default-members = ["./crates/litesim_macros", "./crates/litesim_models"]


[package]
name = "litesim"
description = "A discrete event simulation library"
author = "Tin Švagelj <tin.svagelj@live.com>"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0 OR zlib"
keywords = ["discrete", "event", "simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand_core = { version = "0.6", optional = true }
rand = { version = "0.8", optional = true }

float-ord = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }

litesim-macros = { path = "./crates/litesim_macros" }

log = "0.4"

thiserror = "1.0"

[features]
default = ["time_f32", "serde", "rand"]

serde = ["dep:serde"]
rand = ["dep:rand_core", "dep:rand"]

time_f32 = ["dep:float-ord"]
time_f64 = ["dep:float-ord"]
time_chrono = ["dep:chrono"]

[dev-dependencies]
log = "0.4"
env_logger = "0.10"
litesim-models = { path = "./crates/litesim_models" }
serde = { version = "1.0", features = ["derive"] }
