[package]
name = "litesim_models"
version = "0.1.0"
edition = "2021"

[dependencies]
litesim = { path = "../.." }

serde = { version = "1.0", features = ["derive"], optional = true }

rand = { version = "0.8", optional = true }

[features]
default = ["queue", "generator", "timer", "serde"]
queue = []
generator = ["dep:rand"]
timer = []
serde = ["dep:serde", "litesim/serde"]
