[package]
name = "litesim-models"
version = "0.1.0"
edition = "2021"

[dependencies]
litesim = { path = "../.." }

serde = { version = "1.0", features = ["derive"], optional = true }

rand = { version = "0.8", optional = true }

[features]
default = ["queue", "rand", "generator", "timer", "serde"]
queue = []
rand = ["dep:rand", "litesim/rand"]
generator = ["rand"]
timer = []
serde = ["dep:serde", "litesim/serde"]
