[package]
name = "litesim-models"
version = "0.1.0"
edition = "2021"

[dependencies]
litesim = { path = "../.." }

serde = { version = "1.0", features = ["derive"], optional = true }

rand = { version = "0.8", optional = true }

[features]
default = ["rand", "serde", "queue", "generator", "timer", "cloner"]

# support
rand = ["dep:rand", "litesim/rand"]
serde = ["dep:serde", "litesim/serde"]

# model flags
queue = []
generator = ["rand"]
timer = []
cloner = []
